<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.ufpb.dispositivosmoveis.manualdofera.FeedbackScreen">

    <view
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="16sp"
        android:text="@string/feedback_view1"
        android:textColor="@color/md_text"
        android:id="@+id/feedback_view1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_seekBar"
        android:layout_below="@+id/note1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <view
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_view2"
        android:textColor="@color/md_text"
        android:textSize="14sp"
        android:id="@+id/feedback_view2"
        android:layout_alignBottom="@+id/feedback_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="173dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/feedback_editText"
        android:textSize="14sp"
        android:textColor="@color/md_text"
        android:layout_above="@+id/send"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/feedback_seekBar"
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_send"
        android:id="@+id/send"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:onClick="sendFeedback"/>

    <view
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_text"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/note0"
        android:id="@+id/note1"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/feedback_view1"
        android:layout_alignLeft="@+id/feedback_view1"
        android:layout_alignStart="@+id/feedback_view1" />

    <view
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_text"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/note1"
        android:id="@+id/note2"
        android:layout_above="@+id/feedback_seekBar"
        android:layout_centerHorizontal="true" />

    <view
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_text"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/note2"
        android:id="@+id/note3"
        android:layout_above="@+id/feedback_seekBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />


</RelativeLayout>
