<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.ufpb.dispositivosmoveis.manualdofera.StartScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/start_screen">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:id="@+id/ic_top"
        android:src="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitStart" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_book"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:id="@+id/imageView" />

    <view
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/app_name"
        android:textSize="34sp"
        android:textColor="@color/md_text_white"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <view
        class="br.com.ufpb.dispositivosmoveis.manualdofera.RobotoLightTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_course"
        android:id="@+id/choose_course"
        android:textColor="@color/md_text"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_below="@+id/ic_top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/combo_course"
        android:layout_below="@+id/choose_course"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:text="@string/choose"
        android:id="@+id/choose_start"
        android:background="?attr/colorPrimary"
        android:textColor="@color/md_text_white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="nextScreen"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp" />

</RelativeLayout>
